[tool.poetry]
name = "bot telegram"
version = "0.1.0"
description = ""
authors = ["Douglas Barcelos <doug-pr@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pytelegrambotapi = "^4.23.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
